--- a/si-korean.tex
+++ b/si-korean.tex
@@ -63,16 +63,16 @@ Formality & \korean{ㅂ} &\textsc{p}$_5$ &	 formal-polite &\citep[4.3.2]{yeon201
 	Polite & \korean{요} & \textsc{yo}$_8$&	 See Table~\ref{tab:korean-styles} \\
 \end{tabular}
 }
-\caption{Frequent Korean verb suffixes in slots 1-8. The first column describes the nine slots. Second column: Representation of one allomorph in Hangeul. Third column: Identifier.}\label{tab:korean-frequent-morphemes}
+\caption{Frequent Korean verb suffixes in slots 1-8. The first column describes the nine slots. Second column: Representation of one allomorph in Hangul. Third column: Identifier.}\label{tab:korean-frequent-morphemes}
 \end{table}
 
 
-Next, we explain how our segmentation corresponds to commonly described paradigms.
+Next, we illustrate how our segmentation corresponds to commonly described paradigms.
 First, in Table~\ref{tab:korean-styles}, we describe the correspondence to the speech style system described by \citep[4.3.2]{yeon2010korean}.
-Second, in Tables~\ref{tab:korean-hada-1}--\ref{tab:korean-hada-3}, we show a paradigm for the verb \korean{하다} \textit{hada} `to do' as described in Wiktionary\footnote{Selection of forms and labeling of rows and columns in Tables ~\ref{tab:korean-hada-1}--\ref{tab:kroean-itda} are from \texttt{https://en.wiktionary.org/wiki/\korean{하다}} and \texttt{https://en.wiktionary.org/wiki/\korean{있다}} (retrieved September 16, 2020).}, which covers some of the affixes in slots 4--7.
+Second, in Tables~\ref{tab:korean-hada-1}--\ref{tab:korean-hada-3}, we show an illustrative paradigm for the verb \korean{하다} \textit{hada} `to do' as described in Wiktionary\footnote{Selection of forms and labeling of rows and columns in Tables ~\ref{tab:korean-hada-1}--\ref{tab:kroean-itda} are from \texttt{https://en.wiktionary.org/wiki/\korean{하다}} and \texttt{https://en.wiktionary.org/wiki/\korean{있다}} (retrieved September 16, 2020).}, which covers some of the affixes in slots 4--7.
 In Table~\ref{tab:kroean-itda}, we show the part of the paradigm of the verb \textit{ida} `to be' corresponding to Table~\ref{tab:korean-hada-1} (the other parts of the paradigm are analogous to those of \textit{hada}).
 Note that none of these paradigms constitute exhaustive lists of all forms of these verbs; instead, they represent commonly used forms in a systematic paradigmatic representation.
-
+We show these in order to illustrate how commonly used forms map onto morpheme sequences.
 
 \begin{table}
 	\begin{center}
@@ -126,7 +126,7 @@ Plain       &   \korean{다}     &  \korean{(느)냐} &  \korean{라}     &  \ko
  \hline
               & \multirow{3}{*}{Past} & \korean{했느냐} & \korean{했어} & \korean{했어요} & \korean{했습니까} \\
               &  & ha-n-neunya &  hae-sseo &  hae-sseo-yo &  haetseumnikka\\
-              &  & -\textsc{ess}$_4$-\textsc{nya}$_7$ &  -\textsc{ess}$_4$-\textsc{eo}$_7$ &  -\textsc{ess}$_4$-\textsc{eo}$_7$+YO$_8$ &  -\textsc{ess}$_4$-\textsc{p}$_5$-\textsc{ni}$_6$-\textsc{kka}$_7$\\
+	      &  & -\textsc{ess}$_4$-\textsc{nya}$_7$ &  -\textsc{ess}$_4$-\textsc{eo}$_7$ &  -\textsc{ess}$_4$-\textsc{eo}$_7$-\textsc{yo}$_8$ &  -\textsc{ess}$_4$-\textsc{p}$_5$-\textsc{ni}$_6$-\textsc{kka}$_7$\\
               &  &  \korean{하+었+느냐}  & \korean{하+었+어} & \korean{하+었+어+요} & \korean{하+었+습니까} \\
               &  & +ep+ef  & +ep+ef            & px+ep+ef+jxf & pvg+ep+ef \\
               \hline
@@ -209,7 +209,7 @@ Motive && \korean{하려고} \\
 &        &  -\textsc{si}$_3$-\textsc{get}$_4$-\textsc{da}$_7$     &  -\textsc{si}$_3$-\textsc{get}$_4$-\textsc{eo}$_7$              &  -\textsc{si}$_3$-\textsc{get}$_4$-\textsc{eo}$_7$-\textsc{yo} & -\textsc{si}$_3$-\textsc{get}$_4$-\textsc{p}$_5$-\textsc{ni}$_6$-\textsc{da}$_7$        \\
 && -- & -- & -- & -- \\
     \end{tabular}
-    \caption{Continuation of Tables~\ref{tab:korean-hada-1}--\ref{tab:korean-hada-2}: Conjugation of hada with an honorific (\textsc{si}$_3$). We provide Hangul forms, morpheme sequences, and -- where available -- segmentations as given in the Kaist corpus.}
+    \caption{Continuation of Tables~\ref{tab:korean-hada-1}--\ref{tab:korean-hada-2}: Selected forms of hada with an honorific (\textsc{si}$_3$). We provide Hangul forms, morpheme sequences, and -- where available -- segmentations as given in the Kaist corpus.}
     \label{tab:korean-hada-3}
 \end{table}
 
@@ -244,7 +244,7 @@ Motive && \korean{하려고} \\
          &  & \korean{있+겠+다} & \korean{} & \korean{있+겠+어+요} & \korean{있+겠+습니다}\\
          &  & +ep+f             &           & paa+ep+ef+jxf & paa+ep+ef\\
     \end{tabular}
-    \caption{Conjugation of \textit{itda}. Refer to Table~\ref{tab:korean-hada-1} for details.}
+    \caption{Selected forms of \textit{itda}. Refer to Table~\ref{tab:korean-hada-1} for details.}
     \label{tab:kroean-itda}
 \end{table}
 
