Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -369,12 +369,12 @@ Figures~\ref{tab:slots-verbs}--~\ref{tab:examples-verbs} summarize the affixes i
 Sesotho has both prefixes and suffixes; we treat these separately, as we only aim to explain the relative distance of affixes from the base, not which side of the verb they appear on.
 
 Verb affixes are typically grouped into derivational and inflectional affixes.
-Derivational affixes derive new verb stems (e.g., 'do' $\rightarrow$ undo), whereas inflectional affixes derive inflected verb forms from verb stems (e.g., `do' $\rightarrow$ `does').
+Derivational affixes derive new verb stems (e.g., `do' $\rightarrow$ undo), whereas inflectional affixes derive inflected verb forms from verb stems (e.g., `do' $\rightarrow$ `does').
 Examples of derivational suffixes are Japanese -su- and Korean -ha-, which derive verbs from non-verbal stems \citep{hasegawa2014japanese, yeon2010korean}.
-Another example is the reversive suffix in Sesotho (corresponding to `un-' in English `do' $\rightarrow$ `undo', \citep{doke1967textbook}.
+Another example is the reversive suffix in Sesotho (corresponding to `un-' in English `do' $\rightarrow$ `undo', \citep{doke1967textbook}).
 Derivational affixes generally appear closer to the root than inflectional affixes \citep{greenberg-universals-1963}.
 
-Languages can have several inflectional affixes stacked (Figure Figures~\ref{tab:examples-verbs}); their ordering shows universal tendencies \citep{bybee-morphology-1985}, which we summarize as follows:
+Languages can have several inflectional affixes stacked (Figure~\ref{tab:examples-verbs}); their ordering shows universal tendencies \citep{bybee-morphology-1985}, which we summarize as follows:
 
 \begin{adjustwidth}{6em}{6em}
 \textsc{Verb Affix Ordering} \citep{bybee-morphology-1985}:
@@ -475,7 +475,7 @@ For instance, there are cases where semantically equivalent affixes are ordered 
 Furthermore, there are scope-bearing items whose order varies between languages without apparent difference in meaning, for instance, negation appears closer to the root than TAM in Turkish and farther from it in Sesotho.
 
 Relatedly, \citet{saldana2021cross} argue that Greenberg's Universal 39 reflects a cognitive bias favoring orderings that match conceptual structure.
-In an artificial language learning paradigm, they exposed participants to stimuli where nouns had a case or number makrer (but not both), and then had participants extrapolate to forms containing both types of affixes.
+In an artificial language learning paradigm, they exposed participants to stimuli where nouns had a case or number marker (but not both), and then had participants extrapolate to forms containing both types of affixes.
 Learners of an artificial language strongly preferred the ordering described in Greenberg's Universal 39, which \citet{saldana2021cross} interpret as evidence for a cognitive bias favoring a match between linear ordering and conceptual structure.
 They also found that this preference could be reversed by making the form of the affix strongly dependent on the stem, which is not accounted for by conceptual structure, and which they interpret as reflecting a bias towards locality in dependencies.
 
@@ -576,7 +576,7 @@ where $m$ runs over possible memory states.
 
 Different orderings can lead to different tradeoffs that can differ in their efficiency (Figure~\ref{fig:tradeoff}): Tradeoffs are more efficient when comprehenders can achieve lower surprisal for the same amount of memory.
 The efficiency of a tradeoff curve can be quantified using its Area under the Curve (AUC) \citep{Hahn2020modeling}: There is a smaller area under a more efficient tradeoff curve, such as that of Language A in Figure~\ref{fig:tradeoff}.
-\citet{Hahn2020modeling} propose the \textsc{Efficient Tradeoff Hyppthesis}: Human language orders elements in such a way that the memory-surprisal tradeoff is particularly efficient, compared to other possible orderings.
+\citet{Hahn2020modeling} propose the \textsc{Efficient Tradeoff Hypothesis}: Human language orders elements in such a way that the memory-surprisal tradeoff is particularly efficient, compared to other possible orderings.
 
 \begin{figure}
     \centering
