Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -721,7 +721,7 @@ In most languages, real orderings have lower AUC than the vast majority of rando
 Finnish verbs form the only exception; AUCs of real orderings are similar to those of baseline orderings (see below for discussion).
 
 Second, we evaluated the accuracy of optimized orderings in predicting real orderings.
-If the Efficient Tradeoff Hypothesis predicts morpheme order, then optimized orderings should achueve a higher prediction accuracy than most other possible orderings.
+If the Efficient Tradeoff Hypothesis predicts morpheme order, then optimized orderings should achieve a higher prediction accuracy than most other possible orderings.
 Figures \ref{tab:optimized_acc_nouns}--\ref{tab:optimized_acc_verbs} show the accuracy of optimized and random baseline orderings in predicting real orderings. 
 We measured accuracy by counting what fraction of all pairs of affixes within a single word from the corpus are ordered in the same relative ordering as under the real ordering (see SI Section S2 for other ways of quantifying accuracy, with very similar results)
 %We defined three measures of agreement:
@@ -856,7 +856,7 @@ The accuracy of optimized orderings is indicated by the red bars at the top.
     \caption{Accuracies in predicting verb morpheme ordering.
     For the baselines, we provide both a smoothed violin plot of the distribution of accuracies, and the mean accuracy as a horizontal line (green and blue). For the optimized order, we show the accuracy as a horizontal line (red).
 	The numbers indicate what fraction of baselines (random or universal-constrained) have a lower accuracy than the optimized ordering.
-	In all languages, optimized orderings provide higher accuracy than the majority of random baselines. In some languages, they additionally nave higher accuracy than most universal-constrained baselines.}
+	In all languages, optimized orderings provide higher accuracy than the majority of random baselines. In some languages, they additionally have higher accuracy than most universal-constrained baselines.}
     \label{tab:optimized_acc_verbs}
 \end{figure}
 
@@ -1039,7 +1039,7 @@ Their notion of informativity, due to \citep{priva2017informativity}, quantifies
 It is thus similar to the mutual information $I_1$ (\ref{eq:mi}) between adjacent morphemes.
 %However, unlike mutual information~\ref{eq:mi}, it does not provide a single optimization
 However, unlike the memory-surprisal tradeoff, it does not yield a single notion of efficiency that includes statistical relations also between nonadjacent morphemes at different distances.
-The theory of \citet{inkelas2016affix} could thus be seen as an approximation to the Efficient Tradeoff Hypothesis based on only intractions between adjacent morphemes.
+The theory of \citet{inkelas2016affix} could thus be seen as an approximation to the Efficient Tradeoff Hypothesis based on only interactions between adjacent morphemes.
 
 %Inkelas: informativity: they propose that bigram surprisal is minimized (not their terminology), test this in a pilot study of Turkish, with partially confirming results \citep{inkelas2015informativity}
 %Alternatively, the lower thefrequency of the derived word in relation to the base word, the more important the role ofthe constituents become
